--- a/guitar.css
+++ b/guitar.css
@@ -1,9 +1,4 @@
-:root{
-    --clr-text-primary:#171A21;
-    --clr-text-secondary:#8d8d8d;
-    --font-family:Heebo,sans-serif;
-  }
-*,*::after,*::before{
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box; 
